--- a/pages/art.html
+++ b/pages/art.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="this is a description" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel = "icon" href = "../images/H-logo.png" type = "image/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
     <title>ART</title>
@@ -17,9 +18,13 @@
     <div class="hover-effect"></div>
     <div class="top_bar">ART</div>
 
-    <h2>This is for an SCP website I tryed building a long time ago (the eyes are blinking).</h2>
+    <h2>This I created for an SCP website I was building. (the eyes are blinking).</h2>
     <img src="../images/eyes.gif" class="SCP-image">
-    <h2><span class="red">Under construction</span>    This is going to be the logo for the tooth haven dentistry project.</h2>
-    <h2><span class="red">Under construction</span>    This is going to be the logo for the velocity motors car dealership project.</h2>
+    <h2> This is the art I created in a project for a dental care facility called Sunny Side Dental Care.</h2>
+    <div class="sunny-side-art-container">
+    <img src="../images/cavity.png" class="Sunny-Side-Art">
+    <img src="../images/cleaned.png" class="Sunny-Side-Art">
+    <img src="../images/braces.png" class="Sunny-Side-Art">
+  </div>
     </body>
     </html>
