--- a/pages/java.html
+++ b/pages/java.html
@@ -6,6 +6,7 @@
     <meta name="description" content="this is a description" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel = "icon" href = "../images/H-logo.png" type = "image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
     <title>Javascript</title>
     <link rel="stylesheet" href="../css/main.css" />
@@ -21,10 +22,6 @@
 <a href="silly.html" target="_blank" <div class="big-button grow">Story Generator</a>
 <h2>This just changes the color of the page, basic stuff.</h2>
 <a href="theme.html" target="_blank" <div class="big-button grow">Theme Changer</a>
-
-  <h2>This is the different hover cursor effects, right now I only have one; so I decided to
-    make it into a cool home page for the SCP website that I worked on a long time ago.</h2>
-  <a href="SCP.html" target="_blank" <div class="big-button grow">SCP</a>
   </html>
 </body>
 
