--- a/pages/silly.html
+++ b/pages/silly.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
+    <link rel = "icon" href = "../images/H-logo.png" type = "image/x-icon">
     <script src="../javascript/silly.js" defer></script>
     <title>not humerous story generator</title>
 
