--- a/pages/layouts.html
+++ b/pages/layouts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="this is a description" />
+    <link rel = "icon" href = "../images/H-logo.png" type = "image/x-icon">
     <title>Layouts</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/layouts.css" />
