--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
    
     <div class="about-work">
-      <h1 class="about-me-header">A little about my work</h1>
+      <h1 class="about-me-header">A little about my work <a href="https://www.fiverr.com/hudsonrudd?public_mode=true" target="_blank">(link to my fiverr page)</a></h1>
 
       <p class="about-me-text">I am dedicated to being a front-end web developer, and I love programming. My passion lies in creating aesthetic, vibey, and visually appealing websites. I specialize in building interactive and responsive websites that engage users. By staying updated with the latest trends and technologies, I ensure that the websites I create are visually captivating. Crafting seamless experiences across all devices is a top priority for me, allowing users to access and enjoy the content I develop from any platform.</p>
     </div>
@@ -52,7 +52,7 @@
      <div class="dropdown-content">
           <!-- Dropdown menu items -->
           <div class="sunny-side">
-          <a class="big-button " href="#">Sunny Side Dental Care</a>
+          <a class="big-button " href="sunnysidedentistcare.com">Sunny Side Dental Care</a>
         </div>
         </div>
       </div>
