--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     
 
       <h2>This is all the art I have made for websites.</h2>
-      <a href="pages/art.html" target="_blank" class="big-button grow">ART</a>
+      <a href="pages/art" target="_blank" class="big-button grow">ART</a>
 
       <h2>This is all the css intensive stuff like responsive web design and layouts.</h2>
-      <a href="pages/css.html" target="_blank"  class="big-button grow">CSS</a>
+      <a href="pages/css" target="_blank"  class="big-button grow">CSS</a>
 
       <h2>This is what is following your mouse.</h2>
-    <a href="pages/java.html" target="_blank"  class="big-button grow">JAVA</a>
+    <a href="pages/java" target="_blank"  class="big-button grow">JAVA</a>
             
    
   
