--- a/pages/java.html
+++ b/pages/java.html
@@ -19,9 +19,9 @@
   <div class="top_bar">Javascript</div>
  
 <h2>This creates a not so humerous story generator.</h2>
-<a href="silly.html" target="_blank" <div class="big-button grow">Story Generator</a>
+<a href="silly" target="_blank" <div class="big-button grow">Story Generator</a>
 <h2>This just changes the color of the page, basic stuff.</h2>
-<a href="theme.html" target="_blank" <div class="big-button grow">Theme Changer</a>
+<a href="theme" target="_blank" <div class="big-button grow">Theme Changer</a>
   </html>
 </body>
 
