--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <body>
     <div class="hover-effect"></div>
-    <div class="top_bar">Hudsons Portfolio</div>
+    <div class="top_bar"><a href="/">Hudsons Portfolio</a></div>
 
   <div class="container">
     
@@ -71,11 +71,6 @@
       <h2>This is all the art I have made for websites.</h2>
       <a href="pages/art" target="_blank" class="big-button grow">ART</a>
 
-      <h2>This is all the css intensive stuff like responsive web design and layouts.</h2>
-      <a href="pages/css" target="_blank"  class="big-button grow">CSS</a>
-
-      <h2>This is what is following your mouse.</h2>
-    <a href="pages/java" target="_blank"  class="big-button grow">JAVA</a>
             
    
   
