--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      <div class="dropdown-content">
           <!-- Dropdown menu items -->
           <div class="sunny-side">
-          <a class="big-button " href="https://sunnysidedentistcare.com">Sunny Side Dental Care</a>
+          <a class="big-button" href="https://sunnysidedentistcare.com" target="_blank">Sunny Side Dental Care</a>
         </div>
         </div>
       </div>
