favicon and description change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="about-me">
       <h1 class="about-me-header">A little about me</h1>
 
-      <p class="about-me-text"> I have been immersed in the world of coding for a significant portion of my life. With a year of serious dedication to front-end web development under my belt, I have honed my skills and expertise in this field. Freelance web development has been a cherished aspiration of mine for the past four years, fueling my drive to create impactful and visually stunning websites.</p>
+      <p class="about-me-text"> I have been immersed in the world of coding for a significant portion of my life. With a 2 years of serious dedication to front-end web development under my belt, I have honed my skills and expertise in this field. Freelance web development has been a cherished aspiration of mine for the past two years, fueling my drive to create impactful and visually stunning websites.</p>
     </div>
 
   
