--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
     
    
     <div class="about-work">
-      <h1 class="about-me-header">A little about my work <a href="https://www.fiverr.com/tysonrudd?public_mode=true" target="_blank">(link to my fiverr page)</a></h1>
+      <h1 class="about-me-header">A little about my work <a href="https://www.fiverr.com/tysonrudd?public_mode=true" target="_blank">(my <span class="green">FIVERR</span> link)</a></h1>
 
-      <p class="about-me-text">I am dedicated to being a front-end web developer, and I love programming. My passion lies in creating aesthetic, vibey, and visually appealing websites. I specialize in building interactive and responsive websites that engage users. By staying updated with the latest trends and technologies, I ensure that the websites I create are visually captivating. Crafting seamless experiences across all devices is a top priority for me, allowing users to access and enjoy the content I develop from any platform.</p>
+      <p class="about-me-text"> My skills lie in creating aesthetic, vibey, and visually appealing websites from scratch, allowing for a completely unique website. I build interactive websites with hover effects, scroll effects, animations, etc., engaging users, and creating a lasting impression. I develop all this from scratch using HTML, CSS, and JavaScript, offering full customizability to your website.</p>
     </div>
 
 
     <div class="about-me">
       <h1 class="about-me-header">A little about me</h1>
 
-      <p class="about-me-text"> I have been immersed in the world of coding for a significant portion of my life. With a 2 years of serious dedication to front-end web development under my belt, I have honed my skills and expertise in this field. Freelance web development has been a cherished aspiration of mine for the past two years, fueling my drive to create impactful and visually stunning websites.</p>
+      <p class="about-me-text">I am a dedicated front-end web developer, and I love programming. With two years of front-end web development experience in HTML, CSS, and Javascript, I am still learning new things every day and my skillset is rapidly expanding. If you decide to purchase my service on Fiverr, it is like an investment. I offer heavy discounts to recurring clients, and my skills in the future will be worth much more.</p>
+      
     </div>
-
+    <div class="image-container">
+      <img src="images/me-before.jpg">
+    </div>
   
 
 
@@ -47,7 +50,7 @@
 
 
 
-      <h2>This is all the projects that I have worked on for my fiverr gigs.</h2>
+      <h2>These are all the websites that I have built from scratch for my fiverr gigs.</h2>
       <div class="dropdown dropdown-btn">
     <a class="big-button grow ">PROJECTS <span class="arrow">&#9660;</span></a>
      <div class="dropdown-content">
