--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="Hudson Rudds Portfolio" content="This is a collection of all my work in front-end web development" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel = "icon" href = "../images/H-logo.png" type = "image/x-icon">
-    <link rel = "icon" href = "H-logo.ico" type = "image/x-icon">
+    <link rel = "icon" href = "images/favicon.ico" type = "image/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
     <title>Hudsons Portfolio</title>
